--- a/HotOffTheNumberPad/wear/build.gradle
+++ b/HotOffTheNumberPad/wear/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.scottbishop.hotoffthenumberpad"
+        applicationId "com.scottbishop.HotOffTheDialer"
         minSdkVersion 21
         targetSdkVersion 21
         versionCode 1
