--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "21.0.0"
 
     defaultConfig {
         applicationId "com.scottbishop.HotOffTheDialer"
-        minSdkVersion 19
-        targetSdkVersion 19
+        minSdkVersion 21
+        targetSdkVersion 22
         versionCode 3
         versionName "1.0"
     }
@@ -29,8 +29,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:20.0.+"
-    compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.android.support:cardview-v7:21.0.0'
+    compile 'com.android.support:support-v4:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.google.android.gms:play-services:7.0.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support:cardview-v7:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.3'
