--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Apr 27 20:08:53 PDT 2015
-sdk.dir=/Users/scottbishop/Library/Android/sdk
+#Tue Apr 28 23:04:54 PDT 2015
+sdk.dir=/Users/scott.bishop/Documents/sdk
